update to read file from package

--- a/com/sv/changefilenames/cfn.config
+++ b/com/sv/changefilenames/cfn.config
@@ -1,6 +1,6 @@
-#Fri Jul 03 00:05:01 BST 2020
+#Fri Jul 03 09:19:56 BST 2020
 default-action=REMOVE_CHARS_FROM_START
-default-extension=mp4
+default-extension=pdf
 default-location=C\:\\sv\\VedPuran\\Ramayan
 default-param2=
-default-param1=sv
+default-param1=42
