Update converters for change file names

--- a/cfn.config
+++ b/cfn.config
@@ -1,6 +1,6 @@
-#Sun Aug 02 15:51:40 BST 2020
-default-action=REMOVE_CHARS_FROM_START
-default-extension=pdf
-default-location=C\:\\sv\\VedPuran\\Ramayan
-default-param2=
-default-param1=45
+#Sun Aug 02 18:43:17 BST 2020
+default-action=REPLACE_MATCH_FROM_END
+default-extension=txt
+default-location=C\:\\t
+default-param2=appu
+default-param1=Copy
