--- a/cfn.config
+++ b/cfn.config
@@ -2,5 +2,5 @@
 default-action=REPLACE_MATCH_FROM_END
 default-extension=txt
 default-location=C\:\\t
-default-param2=appu
+default-param2=replacer
 default-param1=Copy
