--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sv</groupId>
+    <parent>
+        <groupId>com.sv</groupId>
+        <artifactId>core-parent</artifactId>
+        <version>1.0</version>
+    </parent>
+
     <artifactId>change-file-names</artifactId>
     <version>1.0</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.sv</groupId>
+            <artifactId>swing-ui</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
