update for changes

--- a/conf.config
+++ b/conf.config
@@ -1,6 +1,6 @@
-#Thu Dec 31 18:40:32 GMT 2020
+#Thu Dec 31 18:42:52 GMT 2020
 Extension=mkv
-Action=REMOVE_SPACES_FROM_END
+Action=REPLACE_MATCH_FROM_END
 Param2=
-Param1=BluRay 480p Hindi English
-Folder=c\:\\t
+Param1=\ Join @Mirjapur2
+Folder=C\:\\Users\\shaiverm\\Downloads\\Telegram Desktop\\Marvel
